# tpml.py

./: .pylintrc  pyproject.toml
scm/: church.scm  datastructures.scm
tests/: test_interpreter.py  test_io.py
tests/scm/: begin.scm  car.scm  cdr.scm
tpml/: interpreter.py  io.py  repl.py
