[tool.poetry]
name = "tpml"
version = "0.1.0"
description = ""
authors = ["thattommyhall <thattommyhall@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sexpdata = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
